overflow issue fixed for smaller window

--- a/webapp/finder/find/theme/styles/pages/results.css
+++ b/webapp/finder/find/theme/styles/pages/results.css
@@ -2763,6 +2763,12 @@ a.btn-accent {
 		width: calc(100%);
 	}
 }
+.modal-lg:has(.entitydialog) {
+	max-width: calc(100% - 16px);
+}
+.modal {
+	padding: 0 !important;
+}
 .faceprofile-attachedmedia {
 	position: relative;
 	margin: 5px;
@@ -3201,7 +3207,7 @@ ul.inlinelist li {
 	line-height: 36px;
 }
 .category-breadcrumb p span {
-	color: #c6d8ff;
+	color: var(--muted-text);
 }
 .category-breadcrumb a {
 	display: flex;
@@ -3335,9 +3341,10 @@ ul.inlinelist li {
 	flex-grow: 1;
 	display: flex;
 	flex-direction: column;
+	height: 100%;
 }
 .embedmediacol-tree {
-	width: 260px;
+	width: 200px;
 	transition: all 0.2s ease-in-out;
 }
 .lighttheme .embedmediacol-tree {
